chore(release): publish v1.0.2 build to npm via dist/

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "rxjs": "^7.4.0",
     "typescript": ">=5.5.0 <5.7.0",
     "zone.js": "^0.15.0"
+  },
+  "dependencies": {
+    "@fineract/client": "^1.0.2"
   }
 }
