--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fineract/client",
+  "name": "@mifos/client",
   "version": "1.0.4",
-  "description": "OpenAPI client for @fineract/client",
+  "description": "OpenAPI client for @mifos/client",
   "author": "OpenAPI-Generator Contributors",
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
     "openapi-client",
     "openapi-generator"
   ],
-  "license": "Unlicense",
+  "license": "Mozilla",
   "scripts": {
     "build": "ng-packagr -p ng-package.json"
   },
