--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@mifos/client",
   "version": "1.12.1",
   "description": "OpenAPI client for @mifos/client",
-  "author": "Mifos Community",  
+  "author": "Mifos Community",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/openMF/fineract-client-ts.git"
+  },
   "keywords": [
     "openapi-client",
     "openapi-generator"
